fix: fix tavle overflow on mobile phone

--- a/src/pages/Admin/Categories.css
+++ b/src/pages/Admin/Categories.css
@@ -20,6 +20,8 @@
 
     button {
         padding: 5px 10px;
+        width: auto;
+        border-radius: 4px;
     }
 }
 
